fix: allow all origins in CORS for mobile and web clients